--- a/README.rdoc
+++ b/README.rdoc
@@ -10,6 +10,8 @@ Things you may want to cover:
 * System dependencies
 
 * Configuration
+  1. Run `bundle install`
+  2. Run `rails generate simple_form:install --bootstrap`
 
 * Database creation
 
